--- a/post/2019-08-04-r语言建立博客.Rmd
+++ b/post/2019-08-04-r语言建立博客.Rmd
@@ -9,3 +9,9 @@ tags: []
 description: ''
 thumbnail: ''
 ---
+# R语言在Github上搭建博客
+## 第1步，Rstudio搭建平台
+## 第2步，gihub网站上的注册，并创建仓库
+## 第3步，本地blogdown建站
+## 第4步，提供给github建站
+## 第5步，创建博文
